--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@typescript-eslint/parser": "^4.4.1",
     "axios": "^0.19.0",
     "history": "^5.0.0",
+    "jodit-react": "^1.0.66",
     "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-drag-sortable": "^1.0.6",
     "react-elastic-carousel": "^0.7.4",
     "react-html-parser": "^2.0.2",
     "react-redux": "^7.1.1",
