Udah dulu dah, date shiyou yo~

--- a/envs/release.json
+++ b/envs/release.json
@@ -1,5 +1,6 @@
 {
   "app": {
-    "BASE_URL": "https://api.respirar.id"
+    "BASE_URL": "https://api.respirar.id",
+    "FILE_URL": "https://files.respirar.id"
   }
 }
