--- a/package.json
+++ b/package.json
@@ -2,6 +2,16 @@
   "name": "respirar.id",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://cms.respirar.id",
+  "scripts": {
+    "sass": "sass --watch sass/index.scss public/style.css",
+    "env:prod": "node scripts/set-environment.js release",
+    "env:dev": "node scripts/set-environment.js developement",
+    "start": "yarn env:dev && react-scripts start",
+    "build": "set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -40,15 +50,6 @@
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^6.1.2",
     "styled-components": "^5.1.1"
-  },
-  "scripts": {
-    "sass": "sass --watch sass/index.scss public/style.css",
-    "env:prod": "node scripts/set-environment.js release",
-    "env:dev": "node scripts/set-environment.js developement",
-    "start": "yarn env:dev && react-scripts start",
-    "build": "set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
