--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-drag-sortable": "^1.0.6",
     "react-elastic-carousel": "^0.7.4",
     "react-html-parser": "^2.0.2",
+    "react-lazy-load-image-component": "^1.5.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
