--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "env:prod": "node scripts/set-environment.js release",
     "env:dev": "node scripts/set-environment.js developement",
     "start": "yarn env:dev && react-scripts start",
-    "build": "yarn env:prod && set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
+    "build": "yarn env:prod && GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -22,6 +22,7 @@
     "@types/react": "^16.9.50",
     "@types/react-dom": "^16.9.8",
     "@types/react-html-parser": "^2.0.1",
+    "@types/react-lazy-load-image-component": "^1.5.1",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/redux": "^3.6.0",
