--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@typescript-eslint/parser": "^4.4.1",
     "axios": "^0.19.0",
     "history": "^5.0.0",
+    "html-entities": "^1.3.1",
     "jodit-react": "^1.0.66",
     "moment": "^2.24.0",
     "node-sass": "^4.13.0",
